@@ -1,5 +1,0 @@
-romsdir = $(pkgdatadir)/ROMs
-dist_roms_DATA = pedrom*.tib
-
-romcallsdir = $(pkgdatadir)
-dist_romcalls_DATA = romcalls.*
